sass/stylesheets/sass/screen.scss
$theme-name: 'blue' !default;

$ui-transitions: true !default;

// Sync with JavaScript variable: UI_TRANSITION_DURATION.
$ui-transition-duration: .3s !default;

// Sprite path
$sprite-path: '../img/icon-sprite.svg?20211222';
$browser-sprite-path: '../img/browser-sprite.png?20211222';

@import "utils/mixins";

@import "base/reset";
@import "base/colors";
@import "base/typography";
@import "base/common";

@import "utils/indicator";
@import "utils/resizable";
@import "utils/scrollable";
@import "utils/sortable";

@import "layout/grid";
@import "layout/header";
@import "layout/footer";
@import "layout/sidebar";
@import "layout/form-grid";

@import "components/buttons";
@import "components/color-picker";
@import "components/dashboard/dashboard";
@import "components/dashboard/widget-item";
@import "components/dashboard/widget-tophosts";
@import "components/diff";
@import "components/form-search";
@import "components/inline-filter";
@import "components/menu-main";
@import "components/menu-user";
@import "components/message-box";
@import "components/radio-list-control";
@import "components/service/info";
@import "components/subfilter";
@import "components/tabfilter";
@import "components/toc";
@import "components/z-bar-gauge";
@import "components/z-select";

@import "components/dashboard/widget-slareport";
@import "components/dashboard/widget-svggraph";

.link-action {
	border-bottom: 1px dotted;
	cursor: pointer;
	color: $font-color;

	&:visited {
		@extend %link-action-style;
	}

	&:hover {
		@extend %link-action-style;
		color: $link-hover-color;
		border-bottom: 1px solid rgba($link-hover-color, .35);
	}

	&:active {
		@extend %link-action-style;
	}

	&:focus {
		outline: none;
		border-bottom: 2px solid rgba($link-hover-color, .35);
	}
}

%link-action-style {
	border-bottom: 1px dotted;
	text-decoration: none;
}

.link-alt {
	text-decoration: none;
	cursor: pointer;

	&:link {
		border-bottom: 1px solid rgba($link-alt-underline-color, .35);
	}

	&:visited {
		border-bottom: 1px solid rgba($link-alt-underline-color, .35);
	}

	&:hover {
		color: $link-hover-color;
		border-bottom: 1px solid rgba($link-hover-color, .5);
	}

	&:focus {
		color: $link-hover-color;
		outline: none;
		border-bottom: 2px solid rgba($link-hover-color, .35);
	}

	&:active {
		color: $link-active-color;
		border-bottom: 1px solid rgba($link-active-color, .5);
	}
}

.disabled {
	cursor: default !important;
	opacity: .35;
	background-color: transparent;

	.subfilter-enabled {
		color: darken($ui-bg-selected-color, 35%);
	}

	.subfilter-disable-btn {
		cursor: default;
		color: darken($ui-bg-selected-color, 25%);
		background-color: $ui-bg-selected-color;

		&:hover,
		&:focus,
		&:active {
			color: darken($ui-bg-selected-color, 25%);
		}
	}

	.disabled,
	[disabled] {
		opacity: 1 !important;
	}
}

.monospace-font {
	font-family: $font-stack-mono;
}

%space-pre-wrap {
	white-space: pre-wrap;
	word-break: break-word;
	overflow-wrap: break-word;
}

.arrow-up {
	@extend %arrow;
	border: 0;
	border-left: 4px solid transparent;
	border-right: 4px solid transparent;
	border-bottom: 6px solid $font-color;
}

.arrow-down {
	@extend %arrow;
	border: 0;
	border-left: 4px solid transparent;
	border-right: 4px solid transparent;
	border-top: 6px solid $font-color;
}

.arrow-left {
	@extend %arrow;
	border-bottom: 4px solid transparent;
	border-top: 4px solid transparent;
	border-right: 6px solid $font-color;
}

.arrow-right {
	@extend %arrow;
	border-bottom: 4px solid transparent;
	border-top: 4px solid transparent;
	border-left: 6px solid $font-color;
}

%arrow {
	display: inline-block;
	height: 0;
	width: 0;
	font-size: 0;
	line-height: 0;
}

.zabbix-logo {
	width: 114px;
	height: 30px;
	background: url($sprite-path) no-repeat 0 -864px;
}

.zabbix-sidebar-logo {
	width: 91px;
	height: 24px;
	background: url($sprite-path) no-repeat -570px -400px;
}

.zabbix-sidebar-logo-compact {
	width: 24px;
	height: 24px;
	background: url($sprite-path) no-repeat -540px -400px;
}

.hor-list {
	> li {
		display: inline-block;
		margin: 0 6px 0 0;

		&:last-child {
			margin: 0;
		}
	}
}

.header-navigation {
	display: inline-block;
	position: relative;
	margin: 0 0 5px;
	z-index: 3;
	max-width: calc(100% - 200px);
	min-height: 24px;

	& > ul {
		display: flex;
		flex-wrap: wrap;
		align-items: baseline;

		& > li {
			margin-right: 5px;
			line-height: 24px;

			> ul {
				display: flex;
				align-items: baseline;
				flex-wrap: wrap;

				li {
					margin-right: 5px;
				}

				&.breadcrumbs > li {
					margin-right: 0;

					&:not(:last-child)::after {
						content: "/";
					}
				}
			}

			.status-container {
				margin-right: 5px;
			}
		}

		li > span {
			display: inline-block;
			padding: 2px 7px;
			line-height: 18px;
			white-space: nowrap;
			vertical-align: top;
			text-overflow: ellipsis;
			overflow: hidden;
			max-width: 250px;

			a {
				vertical-align: top;
				text-overflow: ellipsis;
				overflow: hidden;
				max-width: 200px;
				display: inline-block;
				margin-top: 2px;
				line-height: 14px;
			}

			&.selected {
				background-color: $ui-bg-color;
				border-radius: 2px;
				box-shadow: inset 0 0 0 1px $ui-border-color;
			}
		}
	}

	& + .filter-space {
		margin-top: -29px;
	}
}

form {
	&.is-loading {
		position: relative;
	}
}
/* ... */

